--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Hero Section -->
   <section class="bg-blue-50 py-20 text-center">
-    <h2 class="text-4xl font-bold mb-4">Hi, I'm Your Name</h2>
+    <h2 class="text-4xl font-bold mb-4">Hi, I'm Prateek Arora</h2>
     <p class="text-xl">Business Analyst | Data Visualization | Power Platform</p>
   </section>
 
@@ -69,7 +69,7 @@
       <p class="mb-4">Let's work together! Reach out via email or LinkedIn:</p>
       <ul>
         <li>Email:  <a href="mailto:pratiek.arora7@gmail.com" class="text-blue-600">pratiek.arora7@gmail.com</a></li>
-        <li>LinkedIn: <a href="https://linkedin.com/in/prateek-aroraa7/" target="_blank" class="text-blue-600">linkedin.com/in/prateek-aroraa7/</a></li>
+        <li>LinkedIn: <a href="https://linkedin.com/in/prateek-aroraa7/" target="_blank" class="text-blue-600">prateek-aroraa7/</a></li>
       </ul>
     </div>
   </section>
